Lab1/Code/syntax.output
State 30 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | error RC

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 14 20 23 28 37 41
    INT <node> (258) 19 62
    FLOAT <node> (259) 63
    ID <node> (260) 15 17 18 21 22 57 58 60 61
    SEMI <node> (261) 4 5 7 31 33 37 40 41
    COMMA <node> (262) 9 24 43 64
    ASSIGNOP <node> (263) 45 46
    RELOP <node> (264) 49
    PLUS <node> (265) 50
    MINUS <node> (266) 51 55
    STAR <node> (267) 52
    DIV <node> (268) 53
    AND <node> (269) 47
    OR <node> (270) 48
    DOT <node> (271) 60
    NOT <node> (272) 56
    LP <node> (273) 21 22 34 35 36 54 57 58
    RP <node> (274) 21 22 23 34 35 36 54 57 58
    LB <node> (275) 19 59
    RB <node> (276) 19 20 59
    LC <node> (277) 12 27
    RC <node> (278) 12 14 27 28
    TYPE <node> (279) 10
    STRUCT <node> (280) 12 13
    RETURN <node> (281) 33
    IF <node> (282) 34 35
    ELSE <node> (283) 35
    WHILE <node> (284) 36


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    Program <node> (31)
        on left: 1
        on right: 0
    ExtDefList <node> (32)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (33)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (34)
        on left: 8 9
        on right: 4 9
    Specifier <node> (35)
        on left: 10 11
        on right: 4 5 6 26 40
    StructSpecifier <node> (36)
        on left: 12 13 14
        on right: 11
    OptTag <node> (37)
        on left: 15 16
        on right: 12
    Tag <node> (38)
        on left: 17
        on right: 13
    VarDec <node> (39)
        on left: 18 19 20
        on right: 8 9 19 26 44 45
    FunDec <node> (40)
        on left: 21 22 23
        on right: 6
    VarList <node> (41)
        on left: 24 25
        on right: 21 24
    ParamDec <node> (42)
        on left: 26
        on right: 24 25
    CompSt <node> (43)
        on left: 27 28
        on right: 6 32
    StmtList <node> (44)
        on left: 29 30
        on right: 27 29
    Stmt <node> (45)
        on left: 31 32 33 34 35 36 37
        on right: 29 34 35 36
    DefList <node> (46)
        on left: 38 39
        on right: 12 27 38
    Def <node> (47)
        on left: 40 41
        on right: 38
    DecList <node> (48)
        on left: 42 43
        on right: 40 43
    Dec <node> (49)
        on left: 44 45
        on right: 42 43
    Exp <node> (50)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55 56 59 60 64 65
    Args <node> (51)
        on left: 64 65
        on right: 57 64


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI
   14 StructSpecifier: error . RC

    SEMI  shift, and go to state 9
    RC    shift, and go to state 10


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 StructSpecifier: error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 11

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 12

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 13

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

   20 VarDec: error . RB
   23 FunDec: error . RP

    RP  shift, and go to state 23
    RB  shift, and go to state 24


State 17

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 18 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 20

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 8 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 22

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 23

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 24

   20 VarDec: error RB .

    $default  reduce using rule 20 (VarDec)


State 25

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 36
    RP      shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 20


State 28

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 44


State 29

   28 CompSt: error . RC

    RC  shift, and go to state 45


State 30

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   14 StructSpecifier: error . RC
   41 Def: error . SEMI

    SEMI  shift, and go to state 47
    RC    shift, and go to state 10


State 33

   40 Def: Specifier . DecList SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 34

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 35

   38 DefList: Def . DefList

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 35


State 36

   14 StructSpecifier: error . RC

    RC  shift, and go to state 10


State 37

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 38

   26 ParamDec: Specifier . VarDec

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec  go to state 53


State 39

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 40

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 25 (VarList)


State 41

   20 VarDec: error . RB

    RB  shift, and go to state 24


State 42

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 43

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 44

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 45

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 46

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 30
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 47

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 48

   19 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 28

    $default  reduce using rule 44 (Dec)


State 49

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 50

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 42 (DecList)


State 51

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 52

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 53

   19 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 26 (ParamDec)


State 54

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 55

   24 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 40


State 56

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 57

   28 CompSt: error . RC
   37 Stmt: error . SEMI

    SEMI  shift, and go to state 75
    RC    shift, and go to state 45


State 58

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 59

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 60

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 61 (Exp)


State 61

   55 Exp: MINUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 77


State 62

   56 Exp: NOT . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 78


State 63

   54 Exp: LP . Exp RP

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 79


State 64

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 80


State 65

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 66

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


State 67

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 68

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 69

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 30
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 84
    Stmt      go to state 69
    Exp       go to state 70


State 70

   31 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 71

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 96


State 72

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 73

   43 DecList: Dec COMMA . DecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec   go to state 48
    DecList  go to state 97
    Dec      go to state 50


State 74

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 75

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 76

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 98

    Exp   go to state 99
    Args  go to state 100


State 77

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 55 (Exp)


State 78

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 56 (Exp)


State 79

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 101
    LB        shift, and go to state 95


State 80

   33 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 102
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 81

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 103


State 82

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 104


State 83

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 84

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 85

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 86

   46 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 105


State 87

   49 Exp: Exp RELOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 106


State 88

   50 Exp: Exp PLUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 107


State 89

   51 Exp: Exp MINUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 108


State 90

   52 Exp: Exp STAR . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 109


State 91

   53 Exp: Exp DIV . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 110


State 92

   47 Exp: Exp AND . Exp
